Changeded output format

--- a/projectpartfour.ipynb
+++ b/projectpartfour.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -431,38 +431,57 @@
      "text": [
       "\n",
       "Group Recommendations:\n",
-      "- Forrest Gump (1994)\n",
-      "- Speed (1994)\n",
+      "- Terminator 2: Judgment Day (1991)\n",
+      "- Die Hard: With a Vengeance (1995)\n",
+      "- Fight Club (1999)\n",
+      "- Stargate (1994)\n",
+      "- Clueless (1995)\n",
+      "- Crimson Tide (1995)\n",
+      "- Cliffhanger (1993)\n",
+      "- Nightmare Before Christmas, The (1993)\n",
+      "- Pulp Fiction (1994)\n",
       "- Aliens (1986)\n",
-      "- Sleepless in Seattle (1993)\n",
-      "- Jurassic Park (1993)\n",
-      "- Twister (1996)\n",
-      "- Bound (1996)\n",
-      "- Hunt for Red October, The (1990)\n",
-      "- Godfather, The (1972)\n",
-      "- Citizen Kane (1941)\n",
       "\n",
       "WNCF Explanation:\n",
-      "Tie: There was a tie in relevance score with item 'Aliens (1986)', which indicates multiple items had similar relevance to user preferences.\n",
-      "Peers: None of the peers have rated this item, indicating a potential gap in group interest.\n",
+      "Tie: There was a tie in relevance score with item 'Forrest Gump (1994)', which indicates multiple items had similar relevance to user preferences.\n",
+      "Peers: 1 peers have rated the item with an average score of 2.5. This suggests that the item was popular among multiple group members, contributing to its recommendation.\n",
       "numPI: Less than the threshold number of similar peers have rated the item, suggesting limited relevance among users with similar preferences.\n",
       "\n",
-      "Target Item for Explanation: Forrest Gump (1994) (356)\n",
+      "Target Item for Explanation: Terminator 2: Judgment Day (1991) (589)\n",
       "\n",
       "Counterfactual Group Explanation:\n",
-      "If several group members had not liked 'Pulp Fiction (1994)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Pulp Fiction (1994)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
-      "If several group members had not liked 'Fugitive, The (1993)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Fugitive, The (1993)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
-      "If several group members had not liked 'Schindler's List (1993)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Schindler's List (1993)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
-      "If several group members had not liked 'Fargo (1996)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Fargo (1996)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
-      "If several group members had not liked 'Toy Story (1995)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Toy Story (1995)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
+      "If users 6, 7, 8, 1 had not liked 'Usual Suspects, The (1995)', then 'Terminator 2: Judgment Day (1991)' would not have been suggested. This shows that 'Usual Suspects, The (1995)' had a significant influence on recommending 'Terminator 2: Judgment Day (1991)'.\n",
+      "If users 6, 7, 8, 1 had not liked 'Forrest Gump (1994)', then 'Terminator 2: Judgment Day (1991)' would not have been suggested. This shows that 'Forrest Gump (1994)' had a significant influence on recommending 'Terminator 2: Judgment Day (1991)'.\n",
+      "If users 6, 7, 8, 1 had not liked 'Jurassic Park (1993)', then 'Terminator 2: Judgment Day (1991)' would not have been suggested. This shows that 'Jurassic Park (1993)' had a significant influence on recommending 'Terminator 2: Judgment Day (1991)'.\n",
+      "If users 6, 7, 8, 1 had not liked 'Batman (1989)', then 'Terminator 2: Judgment Day (1991)' would not have been suggested. This shows that 'Batman (1989)' had a significant influence on recommending 'Terminator 2: Judgment Day (1991)'.\n",
+      "If users 6, 7, 8, 1 had not liked 'Silence of the Lambs, The (1991)', then 'Terminator 2: Judgment Day (1991)' would not have been suggested. This shows that 'Silence of the Lambs, The (1991)' had a significant influence on recommending 'Terminator 2: Judgment Day (1991)'.\n",
       "\n",
       "Advanced Explanations:\n",
-      "- Genre 'Comedy' is preferred by the group (Avg rating: 3.71).\n",
-      "- Genre 'Drama' is preferred by the group (Avg rating: 3.65).\n",
-      "- Genre 'Romance' is preferred by the group (Avg rating: 3.46).\n",
-      "- Genre 'War' is preferred by the group (Avg rating: 3.71).\n",
-      "- Tie: There was a tie in relevance score with item 'Aliens (1986)', which indicates multiple items had similar relevance to user preferences.\n",
-      "- Peers: None of the peers have rated this item, indicating a potential gap in group interest.\n",
+      "- Peer 117 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.57).\n",
+      "- Peer 58 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.53).\n",
+      "- Peer 240 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.51).\n",
+      "- Peer 239 rated 'Terminator 2: Judgment Day (1991)' 3.5 (Similarity: 0.36).\n",
+      "- Peer 399 rated 'Terminator 2: Judgment Day (1991)' 2.5 (Similarity: 0.35).\n",
+      "- Peer 220 rated 'Terminator 2: Judgment Day (1991)' 5.0 (Similarity: 0.34).\n",
+      "- Peer 354 rated 'Terminator 2: Judgment Day (1991)' 4.5 (Similarity: 0.33).\n",
+      "- Peer 379 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.69).\n",
+      "- Peer 94 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.66).\n",
+      "- Peer 512 rated 'Terminator 2: Judgment Day (1991)' 3.0 (Similarity: 0.66).\n",
+      "- Peer 347 rated 'Terminator 2: Judgment Day (1991)' 3.0 (Similarity: 0.65).\n",
+      "- Peer 266 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.36).\n",
+      "- Peer 313 rated 'Terminator 2: Judgment Day (1991)' 5.0 (Similarity: 0.35).\n",
+      "- Peer 368 rated 'Terminator 2: Judgment Day (1991)' 3.0 (Similarity: 0.35).\n",
+      "- Peer 57 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.35).\n",
+      "- Peer 366 rated 'Terminator 2: Judgment Day (1991)' 4.0 (Similarity: 0.30).\n",
+      "- Movie 'Terminator 2: Judgment Day (1991)' is similar to 'Terminator 2: Judgment Day (1991)' (Similarity: 1.00).\n",
+      "- Movie 'Ed Wood (1994)' is similar to 'Terminator 2: Judgment Day (1991)' (Similarity: 0.48).\n",
+      "- Movie 'It Takes Two (1995)' is similar to 'Terminator 2: Judgment Day (1991)' (Similarity: 0.44).\n",
+      "- Movie 'Red Rock West (1992)' is similar to 'Terminator 2: Judgment Day (1991)' (Similarity: 0.42).\n",
+      "- Movie 'Nixon (1995)' is similar to 'Terminator 2: Judgment Day (1991)' (Similarity: 0.42).\n",
+      "- Genre 'Action' is preferred by the group (Avg rating: 3.78).\n",
+      "- Genre 'Sci-Fi' is preferred by the group (Avg rating: 3.63).\n",
+      "- Tie: There was a tie in relevance score with item 'Forrest Gump (1994)', which indicates multiple items had similar relevance to user preferences.\n",
+      "- Peers: 1 peers have rated the item with an average score of 2.5. This suggests that the item was popular among multiple group members, contributing to its recommendation.\n",
       "- numPI: Less than the threshold number of similar peers have rated the item, suggesting limited relevance among users with similar preferences.\n"
      ]
     }
@@ -475,7 +494,7 @@
     "similarity_matrix = cosine_similarity(user_item_matrix)\n",
     "similarity_df = pd.DataFrame(similarity_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
     "\n",
-    "group_users = [1, 2, 3, 4, 5]\n",
+    "group_users = [6, 7, 8, 1, 2]\n",
     "\n",
     "# Satisfaction scores for the users (initially all unsatisfied)\n",
     "satisfaction_scores = {user: 0.0 for user in group_users}\n",
@@ -620,7 +639,11 @@
     "\n",
     "        # Check if target item is still in group recommendations\n",
     "        if target_item not in new_group_recommendations:\n",
-    "            explanation.append(f\"If several group members had not liked '{get_movie_title(movie)}', then '{get_movie_title(target_item)}' would not have been suggested. This shows that '{get_movie_title(movie)}' had a significant influence on recommending '{get_movie_title(target_item)}'.\")\n",
+    "            users_interacted = [user for user in group_users if user_item_matrix.at[user, movie] > 0]\n",
+    "            if len(users_interacted) == 1:\n",
+    "                explanation.append(f\"If user {users_interacted[0]} had not liked '{get_movie_title(movie)}', then '{get_movie_title(target_item)}' would not have been suggested. This shows that '{get_movie_title(movie)}' had a significant influence on recommending '{get_movie_title(target_item)}'.\")\n",
+    "            else:\n",
+    "                explanation.append(f\"If users {', '.join(map(str, users_interacted))} had not liked '{get_movie_title(movie)}', then '{get_movie_title(target_item)}' would not have been suggested. This shows that '{get_movie_title(movie)}' had a significant influence on recommending '{get_movie_title(target_item)}'.\")\n",
     "\n",
     "    if not explanation:\n",
     "        return f\"No common item removal was found to affect the recommendation of '{get_movie_title(target_item)}'. This indicates that '{target_item}' was recommended due to diverse preferences across the group.\"\n",
@@ -767,6 +790,13 @@
     "for explanation in advanced_explanations:\n",
     "    print(f\"- {explanation}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
